[fix] line-height for error-msg was too small

--- a/modal.css
+++ b/modal.css
@@ -222,7 +222,7 @@ input {
   margin-top: 7px;
   margin-bottom: 7px;
   text-align: left;
-  line-height: 0.3;
+  line-height: 1;
   opacity: 1;
   transition: 0.3s;
 }
